@@ -1,0 +1,9 @@
+## Describe the fields
+## For definition, provide the expected key:values
+## Note that several keys/values can be defined
+##
+###############################################
+
+freq: 'ALLELIC_RATIO'
+depth: 'DP'
+
