@@ -1,6 +1,11 @@
 *************************************
 CHANGES IN VERSION 1.1.0
 
+SIGNIFICANT USER CHANGES
+
+   o Remove parameters `--caller` and use `--varConfig` instead
+   o Remove parameters `--annot` and use `--dbConfig` instead
+
 BUG FIXES
 
    o Deal with '.' in getTag
